<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="#0780DF"
    tools:context=".GPA">

    <Button
        android:id="@+id/btn3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/buttons_design"
        android:text="@string/sub3"
        android:textColor="@color/white"
        android:textSize="16dp"/>
    <Button
        android:id="@+id/btn4"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/buttons_design"
        android:text="@string/sub4"
        android:textColor="@color/white"
        android:textSize="16dp"/>
    <Button
        android:id="@+id/btn5"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/buttons_design"
        android:text="@string/sub5"
        android:textColor="@color/white"
        android:textSize="16dp"/>
    <Button
        android:id="@+id/btn6"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/buttons_design"
        android:text="@string/sub6"
        android:textColor="@color/white"
        android:textSize="16dp"/>
    <Button
        android:id="@+id/btn7"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/buttons_design"
        android:text="@string/sub7"
        android:textColor="@color/white"
        android:textSize="16dp"/>


</LinearLayout>