<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#1CA7E6"
    tools:context=".electrical">

    <Button
        android:id="@+id/electricseme1"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/buttons_design"
        android:textSize="15sp"
        android:textColor="#f0f0f0"
        android:text="@string/seme1"/>

    <Button
        android:id="@+id/electricseme2"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/buttons_design"
        android:textSize="15sp"
        android:textColor="#f0f0f0"
        android:text="@string/seme2"/>

    <Button
        android:id="@+id/electricseme3"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/buttons_design"
        android:textSize="15sp"
        android:textColor="#f0f0f0"
        android:text="@string/seme3"/>




</LinearLayout>
